--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/png" href="./img/heart.svg" />
+    <link rel="shortcut icon" type="image/jpg" href=""C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg"" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -56,8 +56,8 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">Happy Valentine's Day Cutie</h3>
+          <h5 id="wishText">I love you forever <3 !</h5>
         </div>
       </div>
       <div class="seven">
