--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/jpg" href=""C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg"" />
+    <link rel="shortcut icon" type="image/jpg" href="C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
