--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="idea-1">That's what I was going to do.</p>
         <p class="idea-2">But then I stopped.</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          I realised, I wanted to wish you a happy V day in a way thats more <strong>special</strong>.
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
