--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       </div>
       <div class="six">
         <img src="C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg" alt="" class = "girl-dp" id="imagePath" />
+        
+         <img src="C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Cutie</h3>
           <h5 id="wishText">I love you forever <3 !</h5>
