--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="C:\Users\Salamin\OneDrive\Pictures\Phone\WhatsApp Image 2024-02-04 at 11.40.07_647a4b93.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h5 id="wishText"> i lob u </h5>
         </div>
       </div>
       <div class="seven">
